# youtube-audio-downloader

./: GUIDE.md  IMPLEMENTATION.md  QUICK_START.md  README.md  TECHNICAL.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  config.ts  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/i18n/: index.ts
src/i18n/locales/: ar.json  en.json  fa.json  th.json
src/utils/: network.ts
